# mechaship_FW

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  messages.proto  nanopb_import.cmake  platformio.ini
src/: CMakeLists.txt  hw.h  main.c  main.cpp  main.cpp.old  supporter.h
src/app/: app.c  app.h
src/app/rtos/: rtos.c  rtos.h
src/app/rtos/central_task/: central_task.c  central_task.h
src/app/rtos/peripheral_task/: actuator_task.c  actuator_task.h  lcd_task.c  lcd_task.h  sensor_task.c  sled_task.c  sled_task.h
src/app/rtos/rc_task/: rc_task.c  (+1 more)
src/bsp/: bsp.h
src/bsp/battery/: battery.cpp
src/bsp/gps/: gps.cpp
src/bsp/gy87/: gy87.cpp
src/bsp/key/: key.cpp
src/bsp/neopixel/: neopixel.cpp
src/bsp/throttle/: throttle.cpp
src/hw/: hw.c  hw.h
src/hw/driver/: driver.c  driver.h
src/hw/hal/: hal.c  hal.h
src/modules/: battery_service_callback.cpp  error_loop.cpp  gps_timer_callback.cpp  gy87_service_callback.cpp  gy87_timer_callback.cpp  joint_state_timer_callback.cpp  key_service_callback.cpp  rgb_service_callback.cpp  throttle_service_callback.cpp
src/modules/include/: battery_service_callback.h  error_loop.h  gps_timer_callback.h  gy87_service_callback.h  gy87_timer_callback.h  joint_state_timer_callback.h  key_service_callback.h  modules.h  rgb_service_callback.h  throttle_service_callback.h
src/mw/: mw.c  mw.h
src/mw/sbc/: sbc.c  sbc.h
src/mw/tusb/: tusb_.c  tusb_.h  usb_descriptions.c
src/mw/uros/: action.c  agent.c  entity.c  publisher.c  service.c  subscriber.c  support.h  uros.c  uros.h  uros_types.h
(+115 files in other folders)
